[package]
name = "deltio"
version = "0.1.0"
edition = "2021"
description = "A Google Cloud Pub/Sub emulator alternative."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = { version = "0.1.12", features = ["net"] }
async-stream = { version = "0.3.5" }
tonic = { version = "0.9.1" }
prost = { version = "0.11.8" }
prost-types = { version = "0.11.8" }
async-trait = { version = "0.1.68" }
thiserror = { version = "1.0.40" }
tower = { version = "0.4.13" }
bytes = "1.4.0"
base64 = "0.21.0"
futures = "0.3.28"
parking_lot = "0.12.1"
rand = "0.8.5"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }

[build-dependencies]
tonic-build = { version = "0.9.1" }
