[package]
name = "deltio"
version = "0.1.0"
edition = "2021"
authors = ["Jeff Hansen"]
description = "A Google Cloud Pub/Sub emulator alternative for local testing and CI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio-stream = { version = "0.1.12", features = ["net"] }
tokio = { version = "1.28.0", features = ["rt", "rt-multi-thread", "net", "time", "macros", "sync", "parking_lot"] }
async-stream = { version = "0.3.5" }
tonic = { version = "0.9.1" }
prost = { version = "0.11.8" }
prost-types = { version = "0.11.8" }
async-trait = { version = "0.1.68" }
thiserror = { version = "1.0.40" }
tower = { version = "0.4.13" }
bytes = "1.4.0"
base64 = "0.21.0"
futures = "0.3.28"
parking_lot = "0.12.1"
log = "0.4.17"
env_logger = "0.10.0"
lazy_static = "1.4.0"
clap = { version = "4.2.7", features = ["derive"] }

[dev-dependencies]
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
tokio = { version = "1.28.0", features = ["full", "test-util"] }
rand = "0.8.5"

[build-dependencies]
tonic-build = { version = "0.9.1" }

[profile.release]
debug = true