[package]
name = "deltio"
version = "0.6.0"
edition = "2021"
authors = ["Jeff Hansen"]
description = "A Google Cloud Pub/Sub emulator alternative for local testing and CI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio-stream = { version = "0.1", features = ["net"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "time", "macros", "sync", "parking_lot", "signal"] }
async-stream = { version = "0.3" }
tonic = { version = "0.12.2" }
prost = { version = "0.13.2" }
prost-types = { version = "0.13.2" }
async-trait = { version = "0.1" }
thiserror = { version = "1" }
tower = { version = "0.5.0", features = ["full"] }
bytes = "1"
base64 = "0.22.1"
futures = "0.3"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11.5"
lazy_static = "1.4"
reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "cargo"] }

# MiMalloc does not currently cross-compile for `i686-unknown-linux-musl` target,
# so we'll disable MiMalloc for x86 Linux for now.
[target.'cfg(not(all(target_arch = "x86", target_os = "linux")))'.dependencies]
mimalloc = { version = "0.1", default-features = false }

[dev-dependencies]
uuid = { version = "1", features = ["v4", "fast-rng"] }
tokio = { version = "1", features = ["full", "test-util"] }
rand = "0.8"
hyper = { version = "=1.4.1", features = ["server",  "http1"] }
http-body-util = "=0.1.2"
hyper-util = "0.1.7"

[build-dependencies]
tonic-build = { version = "0.12.2" }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true
rpath = false
codegen-units = 1
incremental = true
