[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
google-cloud-pubsub = "0.18"
google-cloud-googleapis = "0.10"
tokio-util = "0.7"
anyhow = "1"
futures-util = "0.3"